# stock_price_analyzer

./: Amazon stock data 2022.2-2025.2.csv  README.md  check_lag.log.txt  data_analysis_log.txt  export.py  pyproject.toml  requirements.txt  판다스_활용.md
dataset/: final_dataset_2006_2021.csv
raw/stock_data/: Amazon stock data 2006.12-2021.10.csv
src/: check_lag.py  make_dataset.py  merge_dataset.py  merge_historical.py  process_news.py  project_analysis_final.py
src/raw/news_data/: Amazon_Web_Services_news_counts_2022-02-01_to_2025-02-19.csv  Amazon_Web_Services_news_counts_2025-11-16_to_2025-11-23.csv
src/stock_analyzer/: __init__.py  analysis.py  cli.py  cli_parse.py  data.py  indicators.py  news.py  report.py
src/stock_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_smoke.py
